nova_tests/strings/neg/plan139_neg_t0_str_len_field.nv
// Plan 139 Ф.0 — str's `len` is internal. Plan 152.1 Ф.4 (D249) supersedes the
// D117 size-accessor rule for `str`: both `s.len` (field) and `s.len()` (the
// retired method) are now rejected with E_STR_NO_LEN — `str` has three diverging
// lengths, so length goes through a lens (`byte_len()` / `as_chars().count()`).
// EXPECT_COMPILE_ERROR E_STR_NO_LEN
module neg.plan139_neg_t0_str_len_field

test "str.len as field (no parens) is a compile error" {
    ro s = "abc"
    ro n = s.len
    assert(n == 3)
}
